--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       img {
         width: 80px;
         height: 80px;
+        border-radius: 50%;
       }
       .solar-system {
         position: relative;
